--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -36,5 +36,6 @@
 /* Layout specific */
 @import "minimal-mistakes/page";
 @import "minimal-mistakes/archive";
+@import "minimal-mistakes/publication";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
