--- a/_sass/minimal-mistakes/_publication.scss
+++ b/_sass/minimal-mistakes/_publication.scss
@@ -88,8 +88,7 @@
       border-bottom: 1px solid $border-color;
     }
     ol {
-      font-size: 0.8em;
-      // font-size: $type-size-6;
+      font-size: $type-size-6;
     }
   
     h1, h2, h3, h4, h5, h6 {
