--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -92,6 +92,9 @@ body {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
   }
+  ol {
+    font-size: $type-size-6;
+  }
 
 	h1, h2, h3, h4, h5, h6 {
 		.header-link {
@@ -301,7 +304,7 @@ body {
   margin-top: 2em;
   color: $muted-text-color;
   font-family: $sans-serif;
-  font-size: $type-size-2;
+  font-size: $type-size-6;
 
   p {
     margin: 0;
