--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -113,7 +113,7 @@ body {
   p,
   li,
   dl {
-    font-size: 0.8em;
+    font-size: 0.8em; // mod
   }
 
   /* paragraph indents */
@@ -121,6 +121,7 @@ body {
     margin: 0 0 $indent-var;
 
     /* sibling indentation*/
+    $paragraph-indent: false;
     @if $paragraph-indent == true {
       & + p {
         text-indent: $indent-var;
