--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -113,7 +113,7 @@ body {
   p,
   li,
   dl {
-    font-size: $type-size-6; // mod (default: 1em)
+    font-size: 1em; // mod (default: 1em)
   }
 
   /* paragraph indents */
